--- a/DotnetConsoleClient/DotnetConsoleClient.csproj
+++ b/DotnetConsoleClient/DotnetConsoleClient.csproj
@@ -6,5 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Ditto" Version="4.*" />
+  </ItemGroup>
 </Project>
