--- a/js-client/package.json
+++ b/js-client/package.json
@@ -12,6 +12,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "overrides": {
+    "ws": ">=8.17.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "start-https": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem react-scripts start",
