--- a/js-client/package.json
+++ b/js-client/package.json
@@ -13,7 +13,10 @@
     "web-vitals": "^2.1.4"
   },
   "overrides": {
-    "ws": ">=8.17.1"
+    "ws": ">=8.17.1",
+    "body-parser": ">=1.20.3",
+    "rollup": ">=2.79.2",
+    "http-proxy-middleware": ">=2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
